--- a/config/locales/hosts/en.yml
+++ b/config/locales/hosts/en.yml
@@ -26,7 +26,7 @@ en:
         results: "Results"
         edit: "Edit"
         destroy: "Destroy"
-        destroy_confirmation: "Do you really want to destroy this host? The monitoring results for this host will also be destroyed."
+        destroy_confirmation: "Do you really want to destroy this host? The monitoring results and alert records for this host will also be destroyed."
       table:
         name: "Name"
         type: "Type"
