--- a/config/locales/panel/en.yml
+++ b/config/locales/panel/en.yml
@@ -3,11 +3,16 @@ en:
     index:
       title: "Overall results"
       subtitle: "monitored services"
-      table:
-        host: "Host"
-        status: "Status"
-        result: "Result (%{units})"
-        global: "Global result"
+      main_chart:
+        title: "Results of %{service} service"
+      alerts_panel:
+        title: "Alerts report"
+      results_panel:
+        table:
+          host: "Host"
+          status: "Status"
+          result: "Result (%{units})"
+          global: "Global result"
       no_element: "There is no active service to show (yet)."
     sidekiq:
       title: "Sidekiq panel"
