Added button to show results from homepage.

--- a/config/locales/panel/en.yml
+++ b/config/locales/panel/en.yml
@@ -8,6 +8,7 @@ en:
       alerts_panel:
         title: "Alerts report"
       results_panel:
+        results: "View results"
         table:
           host: "Host"
           status: "Status"
