Reduced load time of homepage
MODIFY: Reduced length of the chart in the main page.

--- a/config/locales/panel/en.yml
+++ b/config/locales/panel/en.yml
@@ -5,6 +5,7 @@ en:
       subtitle: "monitored services"
       main_chart:
         title: "Results of %{service} service"
+        results: "View results"
       alerts_panel:
         title: "Alerts report"
       results_panel:
